Fix spacing between list items in featured work
List items like "Node.js" and "TypeScript", for example.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -235,18 +235,25 @@ address {
   }
 
   ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     list-style: none;
     margin: 0;
     padding: 0;
   }
 
   li {
-    display: inline-block;
+    margin-right: 4px;
     padding: 0 0.25em;
     border: 1px solid #999;
     border-radius: 4px;
     background: #eee;
     font-size: 0.75em;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
